<resources>
    <string name="app_name">BLE2</string>
    <string name="name">Bluetooth LE Scanner</string>
    <string name="screen_title_main">Device List</string>
    <string name="action_settings">Settings</string>
    <string name="device_height">Device height (in meters)</string>
    <string name="area_size">Area size you want to monitor (in meters)</string>
    <string name="submit">submit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="unknown_device">unknown device</string>
</resources>
