<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp10"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="@string/device_height"
        android:textSize="@dimen/sp20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <Button
            android:onClick="edit_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="@string/minus"
            android:id="@+id/decrement_height"/>

        <TextView
            android:id="@+id/device_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1"
            android:textSize="@dimen/sp20" />

        <Button
            android:onClick="edit_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="@string/plus"
            android:id="@+id/increment_height"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="@string/area_size"
        android:textSize="@dimen/sp20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <Button
            android:onClick="edit_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="@string/minus"
            android:id="@+id/decrement_area"/>

        <TextView
            android:id="@+id/area_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1"
            android:textSize="@dimen/sp20" />

        <Button
            android:onClick="edit_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="@string/plus"
            android:id="@+id/increment_area"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="Final distance setting"
        android:textSize="@dimen/sp20" />


    <TextView
        android:id="@+id/final_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="0"
        android:textSize="@dimen/sp20" />

    <Button
        android:id="@+id/submit_area"
        android:onClick="edit_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dp10"
        android:text="@string/submit" />

</LinearLayout>